basic training end

--- a/example-voting-app/result-app/views/config.json
+++ b/example-voting-app/result-app/views/config.json
@@ -1,7 +1,7 @@
 {
-  "name":"Gordon",
-  "twitter":"@docker",
-  "location":"San Francisco, CA, USA",
-  "repo":["example/votingapp_voting-app","example/votingapp_result-app"],
-  "vote":"Cat"
+  "name":"Carol Guival",
+  "twitter":"@smkrol",
+  "location":"Sao Paulo, SP, Brasil",
+  "repo":["krol/votingapp_voting-app","krol/votingapp_result-app"],
+  "vote":"Python"
 }
